// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighted prop merges styles when false 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  z-index: 10;
}

.emotion-1 {
  position: relative;
  background: white;
  margin: 0.15rem;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 2rem;
  height: 2rem;
}

.emotion-1:not(:hover) .overlay {
  display: none;
}

<div
  id="test-render-container"
>
  <div
    class="emotion-1"
    draggable="false"
  >
    <div
      class="overlay emotion-0"
    >
      Test children
    </div>
  </div>
</div>
`;

exports[`highlighted prop merges styles when false 2`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  z-index: 10;
}

.emotion-1 {
  position: relative;
  background: white;
  margin: 0.15rem;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 2rem;
  height: 2rem;
  opacity: calc(100% / 3 * 2);
}

.emotion-1:not(:hover) .overlay {
  display: none;
}

<div
  id="test-render-container"
>
  <div
    class="emotion-1"
    draggable="false"
  >
    <div
      class="overlay emotion-0"
    >
      Test children
    </div>
  </div>
</div>
`;

exports[`overlayClass prop merges styles 1`] = `
.emotion-1 {
  position: relative;
  background: white;
  margin: 0.15rem;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 2rem;
  height: 2rem;
}

.emotion-1:not(:hover) .overlay {
  display: none;
}

.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  z-index: 10;
  color: red;
}

<div
  id="test-render-container"
>
  <div
    class="emotion-1"
    draggable="false"
  >
    <div
      class="overlay emotion-0"
    >
      Test children
    </div>
  </div>
</div>
`;

exports[`renders with image for named album 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  z-index: 10;
}

.emotion-2 {
  position: relative;
  background: white;
  margin: 0.15rem;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 2rem;
  height: 2rem;
}

.emotion-2:not(:hover) .overlay {
  display: none;
}

<div
  id="test-render-container"
>
  <div
    class="emotion-2"
    draggable="true"
    title="Test album"
  >
    <img
      alt="Test album"
      class="emotion-0"
      crossorigin="anonymous"
      src="https://test.com"
    />
    <div
      class="overlay emotion-1"
    >
      Test children
    </div>
  </div>
</div>
`;

exports[`renders without image for placeholder album 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  z-index: 10;
}

.emotion-1 {
  position: relative;
  background: white;
  margin: 0.15rem;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 2rem;
  height: 2rem;
}

.emotion-1:not(:hover) .overlay {
  display: none;
}

<div
  id="test-render-container"
>
  <div
    class="emotion-1"
    draggable="false"
  >
    <div
      class="overlay emotion-0"
    >
      Test children
    </div>
  </div>
</div>
`;
